--- a/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/indicadores/completude.ipynb
+++ b/Entrega 6/SPC Produto - Protótipo v1/UDA Brasil/indicadores/completude.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,6 +84,269 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id_opr_cad_pos</th>\n",
+       "      <th>doc_cli</th>\n",
+       "      <th>tip_cli</th>\n",
+       "      <th>qtd_pcl</th>\n",
+       "      <th>dat_vct_ult_pcl</th>\n",
+       "      <th>vlr_ctrd_fta_tfm</th>\n",
+       "      <th>sdo_ddr_tfm</th>\n",
+       "      <th>vlr_ctrd</th>\n",
+       "      <th>id_ult_rss_opr</th>\n",
+       "      <th>id_mdl</th>\n",
+       "      <th>cod_mdl</th>\n",
+       "      <th>id_fnt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0f503289-dfb</td>\n",
+       "      <td>87308050371</td>\n",
+       "      <td>F</td>\n",
+       "      <td>52</td>\n",
+       "      <td>20112023</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>259741.1685</td>\n",
+       "      <td>28511582.7</td>\n",
+       "      <td>25e351cc-ec4e-4a47-861e-834f2aa1dc13</td>\n",
+       "      <td>14</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>683ea107-f2e</td>\n",
+       "      <td>54355614187</td>\n",
+       "      <td>F</td>\n",
+       "      <td>36</td>\n",
+       "      <td>06112022</td>\n",
+       "      <td>140141.5236</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>a1f18524-8a4f-40a5-ba31-6fbff83bfd58</td>\n",
+       "      <td>10</td>\n",
+       "      <td>B05</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>d8e48899-58d</td>\n",
+       "      <td>92265948819</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>0.0000</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>63149b03-b3bd-41e3-9b33-86661155bbaf</td>\n",
+       "      <td>15</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5909262c-526</td>\n",
+       "      <td>104455393515</td>\n",
+       "      <td>F</td>\n",
+       "      <td>82</td>\n",
+       "      <td>20112019</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>1520.5905</td>\n",
+       "      <td>27626512.71</td>\n",
+       "      <td>40367466-b381-4452-add6-641eafb6b1be</td>\n",
+       "      <td>14</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>a2baadcc-95a</td>\n",
+       "      <td>8642684152</td>\n",
+       "      <td>F</td>\n",
+       "      <td>65</td>\n",
+       "      <td>15042020</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>8093.7615</td>\n",
+       "      <td>26287450.65</td>\n",
+       "      <td>3e99353c-df9a-4164-831d-84fff45cefdf</td>\n",
+       "      <td>14</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3004</th>\n",
+       "      <td>11bd0eb8-546</td>\n",
+       "      <td>213603194469</td>\n",
+       "      <td>F</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>2115.0240</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>e6c5bd30-c23a-4134-b733-c3546e9981bb</td>\n",
+       "      <td>15</td>\n",
+       "      <td>D01</td>\n",
+       "      <td>179</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3005</th>\n",
+       "      <td>38634b0a-897</td>\n",
+       "      <td>252169585344</td>\n",
+       "      <td>F</td>\n",
+       "      <td>60</td>\n",
+       "      <td>25112018</td>\n",
+       "      <td>145296.1440</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>2274cb1f-602b-4761-bea5-2ef420154a90</td>\n",
+       "      <td>10</td>\n",
+       "      <td>B05</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3006</th>\n",
+       "      <td>cebe727e-8b5</td>\n",
+       "      <td>247391528715</td>\n",
+       "      <td>F</td>\n",
+       "      <td>84</td>\n",
+       "      <td>10092026</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>187834.5642</td>\n",
+       "      <td>20333074.29</td>\n",
+       "      <td>5da63c6a-28be-48e4-8a4a-f71bce8a4a53</td>\n",
+       "      <td>14</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3007</th>\n",
+       "      <td>e6965bba-e4a</td>\n",
+       "      <td>249677066973</td>\n",
+       "      <td>F</td>\n",
+       "      <td>47</td>\n",
+       "      <td>10122021</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>48979.6941</td>\n",
+       "      <td>30874638.3</td>\n",
+       "      <td>adbd7ce7-c890-4f12-a581-7c64db1af242</td>\n",
+       "      <td>14</td>\n",
+       "      <td>C01</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3008</th>\n",
+       "      <td>a5d43fa5-536</td>\n",
+       "      <td>258481778859</td>\n",
+       "      <td>F</td>\n",
+       "      <td>36</td>\n",
+       "      <td>30042021</td>\n",
+       "      <td>74816.1801</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>NULL</td>\n",
+       "      <td>8340c27b-499e-4147-9d29-7268db9bd3bc</td>\n",
+       "      <td>10</td>\n",
+       "      <td>B05</td>\n",
+       "      <td>99</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3000 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id_opr_cad_pos         doc_cli    tip_cli    qtd_pcl  \\\n",
+       "1      0f503289-dfb      87308050371     F          52         \n",
+       "2      683ea107-f2e      54355614187     F          36         \n",
+       "3      d8e48899-58d      92265948819     F          NULL       \n",
+       "4      5909262c-526      104455393515    F          82         \n",
+       "5      a2baadcc-95a      8642684152      F          65         \n",
+       "...                ...             ...        ...        ...   \n",
+       "3004   11bd0eb8-546      213603194469    F          NULL       \n",
+       "3005   38634b0a-897      252169585344    F          60         \n",
+       "3006   cebe727e-8b5      247391528715    F          84         \n",
+       "3007   e6965bba-e4a      249677066973    F          47         \n",
+       "3008   a5d43fa5-536      258481778859    F          36         \n",
+       "\n",
+       "        dat_vct_ult_pcl    vlr_ctrd_fta_tfm    sdo_ddr_tfm       vlr_ctrd  \\\n",
+       "1      20112023           NULL                259741.1685    28511582.7     \n",
+       "2      06112022           140141.5236         NULL           NULL           \n",
+       "3      NULL               NULL                0.0000         NULL           \n",
+       "4      20112019           NULL                1520.5905      27626512.71    \n",
+       "5      15042020           NULL                8093.7615      26287450.65    \n",
+       "...                 ...                 ...            ...            ...   \n",
+       "3004   NULL               NULL                2115.0240      NULL           \n",
+       "3005   25112018           145296.1440         NULL           NULL           \n",
+       "3006   10092026           NULL                187834.5642    20333074.29    \n",
+       "3007   10122021           NULL                48979.6941     30874638.3     \n",
+       "3008   30042021           74816.1801          NULL           NULL           \n",
+       "\n",
+       "                              id_ult_rss_opr    id_mdl    cod_mdl    id_fnt  \n",
+       "1      25e351cc-ec4e-4a47-861e-834f2aa1dc13    14        C01        99       \n",
+       "2      a1f18524-8a4f-40a5-ba31-6fbff83bfd58    10        B05        99       \n",
+       "3      63149b03-b3bd-41e3-9b33-86661155bbaf    15        D01        179      \n",
+       "4      40367466-b381-4452-add6-641eafb6b1be    14        C01        99       \n",
+       "5      3e99353c-df9a-4164-831d-84fff45cefdf    14        C01        99       \n",
+       "...                                      ...       ...        ...       ...  \n",
+       "3004   e6c5bd30-c23a-4134-b733-c3546e9981bb    15        D01        179      \n",
+       "3005   2274cb1f-602b-4761-bea5-2ef420154a90    10        B05        99       \n",
+       "3006   5da63c6a-28be-48e4-8a4a-f71bce8a4a53    14        C01        99       \n",
+       "3007   adbd7ce7-c890-4f12-a581-7c64db1af242    14        C01        99       \n",
+       "3008   8340c27b-499e-4147-9d29-7268db9bd3bc    10        B05        99       \n",
+       "\n",
+       "[3000 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fatec_operacao"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -91,6 +354,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -101,14 +369,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python_defaultSpec_1593359645598",
-   "display_name": "Python 3.7.5 64-bit"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
